--- a/experiment/templates/experiment/feedback.html
+++ b/experiment/templates/experiment/feedback.html
@@ -39,8 +39,8 @@
 		</ul>
 	<h2>Muuta</h2>
 	    <ul  class = 'parent'>
-			<li><label><div>Voitteko arvata, mitä osa-tehtävä mitattiin?</div>
-			{{ form.osa_tehtava }}</label></li>
+			<li><label><div>Osaatko arvata, mitä tehtävä mittasi?</div>
+			{{ form.tehtava }}</label></li>
 			<li><label><div>Hyväksyitkö tietoisesti jonkin strategian palojen välisten rajojen merkitsemisessä?</div>
 			{{ form.strategian }}</label></li>
 			<li><label><div>Mitä kriteereitä käytit rajojen merkitsemiseen, jos sellaisia on?</div>
