--- a/experiment/templates/experiment/questionnaire.html
+++ b/experiment/templates/experiment/questionnaire.html
@@ -26,7 +26,7 @@
 			</div>{{ form.aidinkieli }}</label></li>
 			<li><label><div>Muut osaamasi kielet</div>
 			{{ form.muut_kielet }}</label></li>
-			<li><label><div class='control-label'>Mitä kieliä käytät säännlisesti arjessa?
+			<li><label><div class='control-label'>Mitä kieliä käytät säännöllisesti arjessa?
 			</div>{{ form.kielia_kaytat }}</label></li>
 		</ul>
 	<h2>Koulutus</h2>
