--- a/experiment/templates/experiment/training1.html
+++ b/experiment/templates/experiment/training1.html
@@ -10,7 +10,7 @@
 
 <div id='start' style='display: block;'>
     <h2>Alustus</h2>
-    <p class='paragraph'>Ihmiset prosessoivat tietoa jatkuvasti. Kun otamme vastaan informaatiota, meill&auml; on&nbsp;tapana erotella se&nbsp;nopeasti pieniksi paloiksi eli jaksoiksi. &Auml;l&auml; mieti liikaa, vaan pyri ty&ouml;skentelem&auml;&auml;n vaistonvaraisesti.</p>
+    <p class='paragraph'>Ihmiset prosessoivat tietoa jatkuvasti. Kun otamme vastaan informaatiota, meill&auml; on&nbsp;tapana erotella se&nbsp;nopeasti pieniksi paloiksi eli jaksoiksi. Kun teet teht&auml;v&auml;&auml; &auml;l&auml; mieti liikaa, vaan pyri ty&ouml;skentelem&auml;&auml;n vaistonvaraisesti.</p>
 <a href="#" onclick="start();">Jatka</a>
 
 </div>
