--- a/experiment/templates/experiment/training3.html
+++ b/experiment/templates/experiment/training3.html
@@ -13,7 +13,7 @@
 
 <div id='instructions_2' style='display: block;'>
     <h2>Ohjeet</h2>
-    <p class='paragraph'>Kokeillaan uudestaan. Noudata samoja ohjeita kuin aikaisemminkin: Teht&auml;v&auml;n&auml;si on&nbsp;merkit&auml; rajoja jaksojen v&auml;liin painamalla &rsquo;〜&rsquo; -symboleja. Yksi painallus tuo rajan n&auml;kyviin. Jos painat symbolia uudestaan, raja katoaa. Jos kadotat rivin teksti&auml; lukiessa, pyri pysym&auml;&auml;n puhujan tahdissa. &Auml;l&auml; palaa taaksep&auml;in. Katkelman j&auml;lkeen sinulle esitet&auml;&auml;n kuullun ymm&auml;rt&auml;miseen liittyv&auml; kysymys.</p>
+    <p class='paragraph'>Kokeillaan uudestaan. Noudata samoja ohjeita kuin aikaisemminkin: Teht&auml;v&auml;n&auml;si on&nbsp;merkit&auml; rajoja jaksojen v&auml;liin painamalla &rsquo;〜&rsquo; -symboleja. Yksi painallus tuo rajan n&auml;kyviin. Jos painat symbolia uudestaan, raja katoaa. Jos kadotat rivin teksti&auml; lukiessa, pyri pysym&auml;&auml;n puhujan tahdissa. &Auml;l&auml; palaa taaksep&auml;in. Jaksottamiseen ei&nbsp;ole yht&auml; oikeaa tapaa, eik&auml; teht&auml;v&auml;ss&auml; ole oikeita tai v&auml;&auml;ri&auml; vastauksia. K&auml;yt&auml; intuitiotasi jaksojen rajoja asettaessasi. Katkelman j&auml;lkeen sinulle esitet&auml;&auml;n kuullun ymm&auml;rt&auml;miseen liittyv&auml; kysymys.</p>
 <a href='#' onclick="displaytext();togglePlay();">Aloita</a>
 </div>
 
