--- a/experiment/templates/experiment/taskcompleted.html
+++ b/experiment/templates/experiment/taskcompleted.html
@@ -9,7 +9,7 @@
 {% block content %}
 <section>
     <h1>Tehtävä suoritettu!</h1>
-    <p class='paragraph'>Täytä palautekyselyn seuraavalla sivulla.</p>
+    <p class='paragraph'>Täytä palautekysely seuraavalla sivulla.</p>
     <a href='{% url 'feedback' %}'>Jatka</a>
 </section>
 {% endblock %}
