Edeta - Jatka in training

--- a/experiment/templates/experiment/training1.html
+++ b/experiment/templates/experiment/training1.html
@@ -119,7 +119,7 @@
     };
 
     function handler(lnk_obj){
-      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Edetä' : 'Tauko' ;
+      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Jatka' : 'Tauko' ;
     };
 
 
