--- a/experiment/templates/experiment/training3.html
+++ b/experiment/templates/experiment/training3.html
@@ -116,7 +116,7 @@
     };
 
     function handler(lnk_obj){
-      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Edetä' : 'Tauko' ;
+      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Jatka' : 'Tauko' ;
     };
 
 </script>
