--- a/experiment/templates/experiment/training2.html
+++ b/experiment/templates/experiment/training2.html
@@ -112,7 +112,7 @@
 
 
     function handler(lnk_obj){
-      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Edetä' : 'Tauko' ;
+      lnk_obj.innerHTML = (lnk_obj.innerHTML == 'Tauko') ? 'Jatka' : 'Tauko' ;
     };
 
 </script>
